# TikBox

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  main.cpp
src/net/: socket.cpp  socket.hpp
